--- a/Family Cookbook/Assets/CSS/master_styles.css
+++ b/Family Cookbook/Assets/CSS/master_styles.css
@@ -1,5 +1,6 @@
 :root {
   background-color: #f8f9fa;
+  font-size: 62.5%;
 }
 body {
   color: #656464;
@@ -24,12 +25,12 @@ body {
   font-style: normal;
 }
 .content {
-  padding-top: 30px;
+  padding-top: 5rem;
 }
 .section--hidden {
   opacity: 1;
 }
-
+/* ///////////////////////////// */
 /* Images */
 figure {
   display: inline;
@@ -41,10 +42,6 @@ a {
 img {
   transition: filter 0.5s;
 }
-.lazy_img {
-  filter: blur(20px);
-}
-
 .hover_img figure img {
   -webkit-filter: grayscale(0);
   filter: grayscale(0);
@@ -55,56 +52,122 @@ img {
   -webkit-filter: grayscale(100%);
   filter: grayscale(100%);
 }
-
+.headings {
+  max-width: 2000px;
+  margin: auto;
+}
+/* ///////////////////////////// */
 /* Navigation */
 .navbar {
   overflow: hidden;
   background-color: #365859;
 }
-
+.nav_content {
+  max-width: 2000px;
+}
+/* ///////////////////////////// */
 /* Featured Module */
 .featured h3 {
-  margin: 70px;
+  margin: 3rem;
 }
-/* Featured Images */
-@media screen and (min-width: 1000px) {
+/* Images */
+@media screen and (min-width: 700px) {
   .img_featured {
     object-fit: cover;
     width: 100%;
-    height: 245px;
+    height: 30rem;
   }
 }
 @media screen and (min-width: 1200px) {
   .img_featured {
     object-fit: cover;
     width: 100%;
-    height: 560px;
+    height: 50rem;
   }
 }
+@media screen and (min-width: 1700px) {
+  .img_featured {
+    object-fit: cover;
+    width: 100%;
+    height: 70rem;
+  }
+}
+
 .dish_title {
   text-transform: capitalize;
-  font-size: 15px;
-  padding: 15px;
+  font-size: 1.25rem;
+  padding: 1rem;
 }
 .featured_tag {
-  font-size: 20px;
+  font-size: 1.5rem;
   text-transform: capitalize;
-  width: 200px;
+  width: 15rem;
+  padding: 0.25rem;
   position: relative;
   margin: auto;
-  margin-top: -20px;
+  margin-top: -1.1rem;
+  border-radius: 0.25rem;
   color: white;
   background-color: #365859;
 }
+/* ///////////////////////////// */
+/* Featured Module Mobile */
+.featured_mobile h3 {
+  margin: 3rem 0.5rem 0.5rem 0.5rem;
+  font-size: medium;
+}
+.featured_mobile h4 {
+  font-family: reey;
+}
+/* Large Image */
+@media screen and (min-width: 200px) {
+  .img_featured_mobile_lg {
+    object-fit: cover;
+    width: 100%;
+    height: 20rem;
+    margin-bottom: -1.25rem;
+  }
 
+  /* Cubed Images */
+  .img_featured_mobile_cube {
+    object-fit: cover;
+    width: 15rem;
+    height: 15rem;
+    margin-bottom: -1.25rem;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .featured_mobile_cube_row {
+    max-width: 400px;
+  }
+}
+.featured_mobile_cube_container {
+  max-width: fit-content;
+}
+.featured_tag_mobile {
+  background-color: #365859;
+  color: white;
+  width: 8rem;
+  padding: 0.5rem;
+  border-radius: 0.25rem;
+  margin: auto auto 1rem auto;
+  position: relative;
+}
+/* ///////////////////////////// */
 /* Search bars */
 .search {
-  padding-top: 20px;
-  padding-bottom: 20px;
-  /* margin-bottom: 20px; */
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
   background-color: #365859;
 }
 .searchbar_icons {
+  max-width: fit-content;
+}
+.searchbar_input {
+  width: 60rem;
+}
+.input_container {
   max-width: fit-content;
 }
 .button {
@@ -113,13 +176,13 @@ img {
 .follow {
   color: white;
   max-width: fit-content;
-  margin-top: 15px;
-  font-size: 15px;
+  margin-top: 1rem;
+  font-size: 1rem;
 }
 .icon {
   width: auto;
-  height: 40px;
-  margin: 5px;
+  height: 2.5rem;
+  margin: 0.25rem;
   filter: invert(1);
   opacity: 75%;
 }
@@ -134,84 +197,164 @@ img {
   transform: scale(1.3);
 }
 
+/* ///////////////////////////// */
+/* Search bars Mobile*/
+.search_mobile {
+  background-color: #f0f0f0;
+  padding: 2rem;
+}
+.recipies_btn {
+  background-color: #365859;
+  color: #ffffff;
+  border: none;
+  padding: 0.5rem;
+  border-radius: 0.25rem;
+}
+/* ///////////////////////////// */
+/* scroll categories */
+.scroll_categories_container {
+  overflow-x: scroll;
+}
+.scroll_categories {
+  width: 100%;
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+.scroll_categories_content {
+  width: 10rem;
+  text-align: center;
+  display: block;
+  margin: 1rem;
+}
+.scroll_categories_link {
+  color: #656464;
+  align-items: center;
+}
+.scroll_categories_img {
+  width: 10rem;
+  height: 10rem;
+  border-radius: 100%;
+  object-fit: cover;
+  margin-bottom: 0.5rem;
+}
+/* ///////////////////////////// */
 /* About us */
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 700px) {
   .about_text {
-    width: 350px;
     font-size: x-small;
   }
   .about_us_img {
     object-fit: cover;
     width: 100%;
-    height: 420px;
+    height: 35rem;
   }
 }
 @media screen and (min-width: 1200px) {
   .about_text {
-    width: 400px;
     font-size: small;
   }
   .about_us_img {
     object-fit: cover;
     width: 100%;
-    height: 600px;
+    height: 55rem;
   }
 }
-.about_text h2 {
-  font-family: reey;
-  margin: 50px;
-}
-.about_text {
-  padding-left: 40px;
-  padding-right: 40px;
-  margin-top: 50px;
+@media screen and (min-width: 1700px) {
+  .about_text {
+    font-size: medium;
+  }
+  .about_us_img {
+    object-fit: cover;
+    width: 100%;
+    height: 75rem;
+  }
 }
 
+.about_text h2 {
+  font-family: reey;
+  margin: 2rem;
+  color: #656464;
+}
+.about_text {
+  margin: auto;
+  padding: 2rem;
+  color: #656464;
+}
+/* ///////////////////////////// */
+/* About us Mobile */
+.about_us_mobile_container h5 {
+  font-family: reey;
+  font-size: medium;
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+}
+.about_us_mobile_container h4 {
+  font-size: small;
+  margin-top: 1rem;
+}
+.about_us_mobile_container p {
+  margin-top: 1rem;
+}
+.about_us_mobile_img {
+  object-fit: cover;
+  width: 100%;
+  height: 25rem;
+}
+/* ///////////////////////////// */
 /* Newly added */
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 700px) {
   .newstrip_container {
     font-size: x-small;
   }
-  .newstrip_img {
-    object-fit: cover;
-    width: 250px;
-    height: 150px;
-  }
   .sidebar_img {
     object-fit: cover;
-    width: 200px;
-    height: 300px;
+    width: 20rem;
+    height: 30rem;
   }
 }
 @media screen and (min-width: 1200px) {
   .newstrip_container {
-    font-size: small;
-  }
-  .newstrip_img {
-    object-fit: cover;
-    width: 300px;
-    height: 200px;
+    font-size: x-small;
   }
   .sidebar_img {
     object-fit: cover;
-    width: 300px;
-    height: 400px;
+    width: 25rem;
+    height: 35rem;
+  }
+}
+@media screen and (min-width: 1700px) {
+  .newstrip_container {
+    font-size: small;
+  }
+
+  .sidebar_img {
+    object-fit: cover;
+    width: 30rem;
+    height: 40rem;
   }
 }
 #section--3 h2 {
   font-family: reey;
-  margin: 50px;
+  margin: 3rem;
   color: #656464;
 }
 .newstrip_container {
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
 }
 .newstrip {
-  padding: 5px;
+  padding: 0.25rem;
 }
 .newstrip_img_container {
   max-width: fit-content;
+}
+.newstrip_img {
+  object-fit: cover;
+  width: 20rem;
+  height: 20rem;
 }
 .read_more_link {
   color: #365859;
@@ -225,37 +368,53 @@ img {
 .sidebar {
   max-width: fit-content;
 }
+
 .recipe_link_sidebar {
-  margin-top: 50px;
+  margin-top: 3rem;
 }
 .recipe_link_sidebar h5 {
   font-family: reey;
-  margin: 30px;
+  margin: 1.75rem;
   color: #365859;
 }
 
 /* Featured categories tabs */
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 700px) {
   .featured_categories_img {
     object-fit: cover;
-    height: 150px;
-    width: 200px;
-    margin-top: 5%;
+    height: 15rem;
+    width: 20rem;
+    margin-top: 1rem;
   }
   .featured_categories_dish_title {
-    width: 200px;
+    width: 20rem;
+    font-size: x-small;
   }
 }
 @media screen and (min-width: 1200px) {
   .featured_categories_img {
     object-fit: cover;
-    height: 200px;
-    width: 250px;
-    margin-top: 5%;
+    height: 20rem;
+    width: 25rem;
+    margin-top: 1rem;
   }
 
   .featured_categories_dish_title {
-    width: 250px;
+    width: 25rem;
+    font-size: small;
+  }
+}
+@media screen and (min-width: 1700px) {
+  .featured_categories_img {
+    object-fit: cover;
+    height: 25rem;
+    width: 30rem;
+    margin-top: 1rem;
+  }
+
+  .featured_categories_dish_title {
+    width: 30rem;
+    font-size: medium;
   }
 }
 .featured_categories_container {
@@ -264,20 +423,20 @@ img {
 .featured_categories_tab_container {
   justify-content: center;
   display: flex;
-  margin-bottom: 20px;
+  margin-bottom: 1.5rem;
   background-color: #ffffff;
 }
 .featured_categories_tab {
-  width: 200px;
-  margin: 10px 5px 0px 5px;
-  padding: 10px;
+  width: 12.5rem;
+  margin: 0.75rem 0.25rem 0rem 0.25rem;
+  padding: 0.75rem;
   background-color: #f0f0f0;
   border: none;
 }
 .featured_categories_tab--active {
   background-color: #365859;
   color: white;
-  padding: 10px;
+  padding: 0.75rem;
 }
 .featured_categories_tab:hover {
   opacity: 75%;
@@ -292,11 +451,12 @@ img {
   max-width: fit-content;
 }
 .featured_categories_tag {
-  font-size: 20px;
+  font-size: 1.25rem;
   text-transform: capitalize;
-  width: 150px;
+  width: 15rem;
   margin: auto;
-  margin-top: -20px;
+  margin-top: -0.75rem;
+  border-radius: 0.25rem;
   position: relative;
   color: white;
   background-color: #365859;
@@ -306,8 +466,9 @@ img {
 .footer_nav {
   background-color: #365859;
   color: #ffffff;
-  padding: 20px;
+  padding: 1.5rem;
 }
 .footer_nav ul {
   list-style: none;
+  font-size: small;
 }
